[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TextBubble/TextBubble.gd" type="Script" id=1]
[ext_resource path="res://misc/Font.tres" type="DynamicFont" id=2]

[node name="TextBubble" type="Node2D"]
light_mask = 0
position = Vector2( 263, 233 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0

[node name="Tall" type="Label" parent="."]
light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -227.0
margin_top = -163.0
margin_right = 229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="Players" type="Node" parent="."]

[node name="RemoveTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
